--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,30 @@
     <link rel="icon" href="https://fav.farm/🔥" />
   </head>
   <body>
-    <script></script>
+    <script>
+      // const pressed=[1,2,3,4,5,6]
+      // const secretCode='fahade'
+      // const pressed2=pressed.splice(-secretCode.length-1,1)
+      // console.log(pressed )
+      // console.log(secretCode.length)
+      // console.log(pressed2)
+
+      const pressed=[]
+      const secretCode='fahade';
+      window.addEventListener('keyup',(e)=>{
+        pressed.push(e.key)
+
+        pressed.splice(
+          -secretCode.length -1,
+          pressed.length-secretCode.length
+          );
+        
+        if(pressed.join("").includes(secretCode)){
+          console.log('hellllooo')
+          // document.querySelector('body').innerHTML='<div style="height:50px; width:50px; background:red; "></div> '
+        }
+        console.log(pressed)
+      })
+    </script>
   </body>
 </html>
