--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -16,7 +16,7 @@
       // console.log(pressed2)
 
       const pressed=[]
-      const secretCode='fahade';
+      const secretCode='fahad';
       window.addEventListener('keyup',(e)=>{
         pressed.push(e.key)
 
@@ -27,6 +27,7 @@
         
         if(pressed.join("").includes(secretCode)){
           console.log('hellllooo')
+          cornify_add();
           // document.querySelector('body').innerHTML='<div style="height:50px; width:50px; background:red; "></div> '
         }
         console.log(pressed)
